tests/specs/check/req_types_and_execution_not_found/check.out
Check (tsc [WILDLINE])
TS2307 [ERROR]: Cannot find module 'package' or its corresponding type declarations.
import * as pkg from "package";
                     ~~~~~~~~~
    at file://[WILDCARD]/main.ts:1:22

error: Type checking failed.
